This fixes the web code needed to execute some backend php when correctly placed in an apache directory. We can now run the new jar over mickey.cs.vt.edu and get results back to the front end.
Since mickey is now setup and working, we have a baseline for the front
end.

Closes xwsxethan/MusicScoring#31

--- a/WebCode/index.html
+++ b/WebCode/index.html
@@ -27,7 +27,7 @@
 		<script src="js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<script type="text/javascript">
+		<script>
 			/*$(document).ready(function(){
 				$.ajax({
 					context: this,
@@ -38,17 +38,20 @@
 					}
 				});
 			});*/
-			$('#HobbitRunner').on('click', function () {
+			$(document).on('click', '#HobbitRunner', function () {
+				//alert("I've been clicked.");
 				//Need some code here to execute the jar file with the specified parameters.
 				$.ajax({
 					type: "POST",
-					dataType : "json",
 					url : "backend.php",
 					success : function(results) {
-						alert(results);
+						$('#result').text(results);
+					},
+					error : function(something) {
+						alert("There was a problem. Please try again or contact the Music Scoring team.");
 					}
 				});
-			})
+			});
 		</script>
 		
 		<div class="jumbotron">
