Various aesthetic improvements to the web page and addition of the IRD Abstract as well as changing the name to Musical Complexity Scoring.

--- a/WebCode/navbar.htm
+++ b/WebCode/navbar.htm
@@ -7,10 +7,11 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="MusicScoring.html">Music Scoring</a>
+			<a class="navbar-brand" href="MusicScoring.html">Musical Complexity Scoring</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
+				<li><a href="IRD2015Abstract.pdf">Interdisciplinary Abstract</a></li>
 				<li><a href="https://github.com/xwsxethan/MusicScoring">Github Homepage</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
