--- a/WebCode/MusicalComplexityScoring.html
+++ b/WebCode/MusicalComplexityScoring.html
@@ -76,7 +76,7 @@
 					<div class="row">
 						<div class="col-md-8">
 							<p></p>
-							<p>To get started, select a piece to score from the dropdown below.</p>
+							<p>To get started, select a piece to analyze from the dropdown below.</p>
 							<p>Then click "Get Complexity Score" to obtain results and graphical data.</p>
 						</div>
 					</div>
@@ -98,7 +98,7 @@
 									</div>
 								</div>
 								<div class="col-md-2">
-									<button type="button" id="PDFVersion" class="btn btn-success">PDF of Music Piece</button>
+									<button type="button" id="PDFVersion" class="btn btn-success">View Selected Score</button>
 								</div>
 								<div class="col-xs-1">
 								</div>
@@ -109,7 +109,7 @@
 								<div class="col-md-4">
 									<div class="dropdown">
 										<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-											Select a Piece to Score
+											Select a Piece to Analyze
 											<span class="caret"></span>
 										</button>
 										<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
