--- a/WebCode/index.html
+++ b/WebCode/index.html
@@ -64,6 +64,8 @@
 	</head>
 	<body>
 		<script src="http://d3js.org/d3.v3.min.js"></script>
+		<script src="js/vexflow-min.js"></script>
+		<script src="js/vexflow-min.musicxml.js"></script>
 		<script src="js/MusicScoring.js"></script>
 		
 		<div id="navholder"></div>
@@ -85,23 +87,9 @@
 				<div class="col-md-8">
 					<div class="panel panel-default">
 						<div class="panel-heading">
-							<h3 class="panel-title">Selected Piece:</h3>
+							<h3 class="panel-title">Complexity Scorer</h3>
 						</div>
 						<div class="panel-body">
-							<div class="row">
-								<div class="col-xs-1">
-								</div>
-								<div class="col-md-8">
-									<div id="selectedholder">
-									...		
-									</div>
-								</div>
-								<div class="col-md-2">
-									<button type="button" id="PDFVersion" class="btn btn-success">View Selected Score</button>
-								</div>
-								<div class="col-xs-1">
-								</div>
-							</div>
 							<div class="row">
 								<div class="col-xs-1">
 								</div>
@@ -118,17 +106,27 @@
 										</ul>
 									</div>
 								</div>
+								<div class="col-md-4">
+									<button type="button" id="ComplexityRunner" class="btn btn-primary">Get Complexity Score</button>
+								</div>
+								<div class="col-md-2">
+									<button type="button" id="PDFVersion" class="btn btn-success">View Selected Score</button>
+								</div>
+								<div class="col-xs-1">
+								</div>
 							</div>
 							<div class="row">
-								<div class="col-md-12">
+								<div class="col-xs-1">
 									<p></p>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-1">
 								</div>
-								<div class="col-md-4">
-									<button type="button" id="ComplexityRunner" class="btn btn-primary">Get Complexity Score</button>
+								<div class="col-md-8">
+									<div id="selectedholder" class="well well-sm">
+									...		
+									</div>
 								</div>
 							</div>
 						</div>
@@ -151,15 +149,62 @@
 					</div>
 				</div>
 			</div>
+			<!-- Empty row for spacing. -->
 			<div class="row">
+				<div class="col-md-1">
+					<p></p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-2">
+					<p></p>
+				</div>
 				<div class="col-md-8">
 					<div id="dashboardholder">
 						
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div id="pieholder">
-						
+				<div class="col-md-2">
+					<p></p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-2">
+					<p></p>
+				</div>
+				<div class="col-md-3">
+					<div class="row">
+						<div id="pieholder">
+
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-1">
+							<p></p>
+						</div>
+						<div class="col-md-4">
+							<div id="legendholder">
+
+							</div>
+						</div>
+						<div class="col-xs-1">
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-5">
+					<div id="notationholder">
+						<canvas width="500" height="100" id="notationcanvas" class="hidden"></canvas>
+					</div>
+				</div>
+				<div class="col-md-2">
+					<p></p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-8">
+					<div id="xmlholder">
+
 					</div>
 				</div>
 			</div>
