Added labels to the different graph sections and set the part name output to retain its case.
Closes xwsxethan/MusicScoring#62

--- a/WebCode/index.html
+++ b/WebCode/index.html
@@ -73,12 +73,23 @@
 		<div class="container">
 			<div class="jumbotron">
 				<div class="container-fluid">
-					<div class="row"><h1>Musical Complexity Scoring</h1></div>
 					<div class="row">
-						<div class="col-md-8">
+						<div class="col-md-1">
+							<p></p>
+						</div>
+						<div class="col-md-10">
+							<h1>Musical Complexity Scoring</h1>
+						</div>
+						<div class="col-md-1">
+							<p></p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
 							<p></p>
 							<p>To get started, select a piece to analyze from the dropdown below.</p>
 							<p>Then click "Get Complexity Score" to obtain results and graphical data.</p>
+							<p>Click a row in the table or a bar in the graph to display more data about that specific part.</p>
 						</div>
 					</div>
 				</div>
@@ -160,12 +171,27 @@
 					<p></p>
 				</div>
 				<div class="col-md-8">
-					<div id="dashboardholder">
-						
+					<div class="row text-center">
+						<h2 id="histoTitle" class="hidden">Parts and Complexity Scores</h2>
+					</div>
+					<div class="row">
+						<div id="dashboardholder">
+							
+						</div>
 					</div>
 				</div>
 				<div class="col-md-2">
 					<p></p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-1">
+					<p></p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<h2 id="detailedInfoTitle" class="hidden"></h2>
 				</div>
 			</div>
 			<div class="row">
