Added tracking for the elements of the worst measure and added visualization of that measure on the front end. Also fixed a few random UI bugs.
Closes xwsxethan/MusicScoring#57

--- a/WebCode/index.html
+++ b/WebCode/index.html
@@ -219,8 +219,14 @@
 					</div>
 				</div>
 				<div class="col-md-5">
-					<div id="notationholder">
-						<canvas width="500" height="100" id="notationcanvas" class="hidden"></canvas>
+					<div class="row">
+						<h4 id="worstMeasureTitle" class="hidden"></h4>
+					</div>
+					<div class="row">
+						<div width="500" height="100" id="notationcanvas" class="hidden">
+
+						</div>
+						<h4 id="canvasErrorMessage" class="hidden">There was an error displaying the measure.</h4>
 					</div>
 				</div>
 				<div class="col-md-2">
