--- a/WebCode/index.html
+++ b/WebCode/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="">
 		<meta name="author" content="Ethan Holder">
-		<title>Music Scoring</title>
+		<title>Musical Complexity Scoring</title>
 
 		<!-- Bootstrap core CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
