--- a/WebCode/navbar.htm
+++ b/WebCode/navbar.htm
@@ -7,7 +7,15 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="MusicScoring.html">Musical Complexity Scoring</a>
+			<!-- <a class="navbar-brand" href="MusicScoring.html">Musical Complexity Scoring</a> -->
+			<div class="navbar-brand dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="caret"></span></a>
+				<ul class="dropdown-menu" role="menu">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="About.html">About</a></li>
+					<li><a href="Contact.html">Contact Us</a></li>
+				</ul>
+			</div>
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
