Changed href targets to _blank for new tabs and removed the jump when selecting a piece from the dropdown.
Fixes xwsxethan/MusicScoring#64

--- a/WebCode/index.html
+++ b/WebCode/index.html
@@ -111,9 +111,9 @@
 											<span class="caret"></span>
 										</button>
 										<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-											<li role="presentation" id="hobbit" class="musicpiece active"><a role="menuitem" tabindex="-1" href="#">The Hobbit for Clarinet</a></li>
-											<li role="presentation" id="cmajor" class="musicpiece"><a role="menuitem" tabindex="-1" href="#">C Major Scale</a></li>
-											<li role="presentation" id="actorprelude" class="musicpiece"><a role="menuitem" tabindex="-1" href="#">Actor Prelude</a></li>
+											<li role="presentation" id="hobbit" class="musicpiece active"><a role="menuitem" tabindex="-1">The Hobbit for Clarinet</a></li>
+											<li role="presentation" id="cmajor" class="musicpiece"><a role="menuitem" tabindex="-1">C Major Scale</a></li>
+											<li role="presentation" id="actorprelude" class="musicpiece"><a role="menuitem" tabindex="-1">Actor Prelude</a></li>
 										</ul>
 									</div>
 								</div>
