--- a/WebCode/navbar.htm
+++ b/WebCode/navbar.htm
@@ -19,16 +19,16 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="IRD2015Abstract.pdf">IRD 2015 Abstract</a></li>
-				<li><a href="https://github.com/xwsxethan/MusicScoring">Github Homepage</a></li>
+				<li><a href="IRD2015Abstract.pdf" target="_blank">IRD 2015 Abstract</a></li>
+				<li><a href="https://github.com/xwsxethan/MusicScoring" target="_blank">Github Homepage</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Creators <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
-						<li><a href="http://www.ethanholder.com/index.html">Ethan Holder</a></li>
+						<li><a href="http://www.ethanholder.com/index.html" target="_blank">Ethan Holder</a></li>
 						<li class="divider"></li>
-						<li><a href="http://people.cs.vt.edu/~tilevich/">Dr. Eli Tilevich</a></li>
-						<li><a href="http://www.performingarts.vt.edu/faculty-staff/view/amy-gillick">Dr. Amy Gillick</a></li>
-						<li><a href="http://www.icat.vt.edu/users/r-benjamin-knapp">Dr. R. Ben Knapp</a></li>
+						<li><a href="http://people.cs.vt.edu/~tilevich/" target="_blank">Dr. Eli Tilevich</a></li>
+						<li><a href="http://www.performingarts.vt.edu/faculty-staff/view/amy-gillick" target="_blank">Dr. Amy Gillick</a></li>
+						<li><a href="http://www.icat.vt.edu/users/r-benjamin-knapp" target="_blank">Dr. R. Ben Knapp</a></li>
 					</ul>
 				</li>
 			</ul>
