--- a/WebCode/index.html
+++ b/WebCode/index.html
@@ -110,10 +110,7 @@
 											Select a Piece to Analyze
 											<span class="caret"></span>
 										</button>
-										<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-											<li role="presentation" id="hobbit" class="musicpiece active"><a role="menuitem" tabindex="-1">The Hobbit for Clarinet</a></li>
-											<li role="presentation" id="cmajor" class="musicpiece"><a role="menuitem" tabindex="-1">C Major Scale</a></li>
-											<li role="presentation" id="actorprelude" class="musicpiece"><a role="menuitem" tabindex="-1">Actor Prelude</a></li>
+										<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1" id="pieceDropdownHolder">
 										</ul>
 									</div>
 								</div>
