Added the final poster to the webpage and closing the issue now that the poster is pretty stable.
Closes xwsxethan/MusicScoring#58

--- a/WebCode/navbar.htm
+++ b/WebCode/navbar.htm
@@ -19,7 +19,13 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="IRD2015Abstract.pdf" target="_blank">IRD 2015 Abstract</a></li>
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">IRD 2015 <span class="caret"></span></a>
+					<ul class="dropdown-menu" role="menu">
+						<li><a href="IRD2015Abstract.pdf" target="_blank">Abstract</a></li>
+						<li><a href="IRD_Poster.pdf" target="_blank">Poster</a></li>
+					</ul>
+				</li>
 				<li><a href="https://github.com/xwsxethan/MusicScoring" target="_blank">Github Homepage</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Creators <span class="caret"></span></a>
