Added beckend code to join scores and validation into one json object and turn on validation based on a POST variable.
Added frontend code to request validation via POST and display results
through an alert if requested.

Closes xwsxethan/MusicScoring#51

--- a/WebCode/index.html
+++ b/WebCode/index.html
@@ -163,6 +163,30 @@
 									<p></p>
 								</div>
 								<div class="col-md-6">
+									<p></p>
+								</div>
+								<div class="col-md-4">
+									<div class="input-group">
+									    <span class="input-group-addon">
+									    	<input type="checkbox" id="validationCheckbox" aria-label="...">
+									    </span>
+										<input type="text" id="validationLabel" class="form-control disabled" placeholder="Difficulty validation on/off." disabled>
+								    </div><!-- /input-group -->
+								</div>
+								<div class="col-xs-1">
+									<p></p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-1">
+									<p></p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-1">
+									<p></p>
+								</div>
+								<div class="col-md-6">
 									<button type="button" id="PDFVersion" class="btn btn-success">View Selected Score</button>
 								</div>
 								<div class="col-md-4">
