--- a/WebCode/navbar.htm
+++ b/WebCode/navbar.htm
@@ -22,8 +22,9 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">IRD 2015 <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
-						<li><a href="IRD2015Abstract.pdf" target="_blank">Abstract</a></li>
-						<li><a href="IRD_Poster.pdf" target="_blank">Poster</a></li>
+						<li><a href="Documents/IRD2015Abstract.pdf" target="_blank">Abstract</a></li>
+						<li><a href="Documents/IRD_Poster.pdf" target="_blank">Poster</a></li>
+						<li><a href="Documents/IRD_Handout.pdf" target="_blank">Handout</a></li>
 					</ul>
 				</li>
 				<li><a href="https://github.com/xwsxethan/MusicScoring" target="_blank">Github Homepage</a></li>
