--- a/WebCode/navbar.htm
+++ b/WebCode/navbar.htm
@@ -20,11 +20,12 @@
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">IRD 2015 <span class="caret"></span></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Publications <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
-						<li><a href="Documents/IRD2015Abstract.pdf" target="_blank">Abstract</a></li>
-						<li><a href="Documents/IRD_Poster.pdf" target="_blank">Poster</a></li>
-						<li><a href="Documents/IRD_Handout.pdf" target="_blank">Handout</a></li>
+						<li><a href="Documents/IRD2015Abstract.pdf" target="_blank">IDR Day 2015 Abstract</a></li>
+						<li><a href="Documents/IRD_Poster.pdf" target="_blank">IDR Day 2015 Poster</a></li>
+						<li><a href="Documents/IRD_Handout.pdf" target="_blank">IDR Day 2015 Handout</a></li>
+						<li><a href="Documents/HolderThesis2015.pdf" target="_blank">Preliminary Thesis</a></li>
 					</ul>
 				</li>
 				<li><a href="https://github.com/xwsxethan/MusicScoring" target="_blank">Github Homepage</a></li>
