Updating website with final presentation slides and improved thesis.
Related to xwsxethan/MusicScoring#100

--- a/WebCode/navbar.htm
+++ b/WebCode/navbar.htm
@@ -26,6 +26,7 @@
 						<li><a href="Documents/IRD_Poster.pdf" target="_blank">IDR Day 2015 Poster</a></li>
 						<li><a href="Documents/IRD_Handout.pdf" target="_blank">IDR Day 2015 Handout</a></li>
 						<li><a href="Documents/HolderThesis2015.pdf" target="_blank">Preliminary Thesis</a></li>
+						<li><a href="Documents/ThesisPresentation.pptx" target="_blank">Thesis Presentation</a></li>
 					</ul>
 				</li>
 				<li><a href="https://github.com/xwsxethan/MusicScoring" target="_blank">Github Homepage</a></li>
