Working on game version update.
Related to xwsxethan/MusicScoring#104

--- a/WebCode/Game.html
+++ b/WebCode/Game.html
@@ -70,6 +70,12 @@
 		
 		<div id="navholder"></div>
 
+		<div>
+			<iframe src="set this with js: http://docs.google.com/gview?url=http://path.com/to/your/pdf.pdf&embedded=true" 
+style="width:600px; height:500px;" frameborder="0">
+			</iframe>
+		</div>
+
 		<div class="container">
 			<div class="jumbotron">
 				<div class="container-fluid">
