--- a/WebCode/Game.html
+++ b/WebCode/Game.html
@@ -67,6 +67,7 @@
 		<script src="js/vexflow-min.js"></script>
 		<script src="js/vexflow-min.musicxml.js"></script>
 		<script src="js/MusicScoring.js"></script>
+		<script src="phonegap.js"></script>
 		
 		<div id="navholder"></div>
 
