--- a/WebCode/Contact.html
+++ b/WebCode/Contact.html
@@ -61,6 +61,7 @@
 	</head>
 	<body>
 		<script src="js/MusicScoring.js"></script>
+		<script src="phonegap.js"></script>
 		
 		<div id="navholder"></div>
 
