--- a/WebCode/Game.html
+++ b/WebCode/Game.html
@@ -72,9 +72,6 @@
 		<div id="navholder"></div>
 
 		<div>
-			<iframe src="set this with js: http://docs.google.com/gview?url=http://path.com/to/your/pdf.pdf&embedded=true" 
-style="width:600px; height:500px;" frameborder="0">
-			</iframe>
 		</div>
 
 		<div class="container">
@@ -94,16 +91,20 @@ style="width:600px; height:500px;" frameborder="0">
 					<div class="row">
 						<div class="col-md-12">
 							<p></p>
-							<p>To get started, select a piece to analyze and a difficulty setting to use from the dropdowns below.</p>
-							<p>If you'd like to view the specific music notation for that piece, click "View Selected Piece".</p>
-							<p>Input your guess for the most difficult measure number.</p>
-							<p>Then click "Get Complexity Score" to see if you were right!</p>
+							<p>Select a piece to analyze from the dropdown below.</p>
+							<p>Input your guess for each part's most difficult measure number.</p>
+							<p>Click "Get Complexity Score" to see if you were right!</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-8">
+				<div class="col-lg-4" style="position:relative; left:-300px;">
+					<iframe style="width:800px; height:600px;" frameborder="0" id="pieceFramePDF">
+					<!-- src="set this with js: http://docs.google.com/gview?url=http://path.com/to/your/pdf.pdf&embedded=true"-->
+					</iframe>
+				</div>
+				<div class="col-lg-8" style="position:relative; left:200px;">
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h3 class="panel-title">Complexity Scorer</h3>
@@ -123,6 +124,27 @@ style="width:600px; height:500px;" frameborder="0">
 									</div>
 								</div>
 								<div class="col-md-4">
+									<div id="selectedholder" class="well well-sm">
+									...		
+									</div>
+								</div>
+								<div class="col-xs-1">
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-1">
+									<p></p>
+								</div>
+							</div>
+							<div class="row" id="difficultyToHide">
+								<div class="col-xs-1">
+								</div>
+								<div class="col-md-4">
+									<div id="difficultyholder" class="well well-sm">
+									...		
+									</div>
+								</div>
+								<div class="col-md-6">
 									<div class="dropdown">
 										<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true">
 											Select a Difficulty Setting to Use
@@ -135,27 +157,6 @@ style="width:600px; height:500px;" frameborder="0">
 											<li role="presentation" id="advanced" class="musicdifficulty"><a role="menuitem" tabindex="-1">Advanced</a></li>
 											<li role="presentation" id="professional" class="musicdifficulty"><a role="menuitem" tabindex="-1">Professional</a></li>
 										</ul>
-									</div>
-								</div>
-								<div class="col-xs-1">
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-xs-1">
-									<p></p>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-xs-1">
-								</div>
-								<div class="col-md-6">
-									<div id="selectedholder" class="well well-sm">
-									...		
-									</div>
-								</div>
-								<div class="col-md-4">
-									<div id="difficultyholder" class="well well-sm">
-									...		
 									</div>
 								</div>
 								<div class="col-xs-1">
@@ -189,8 +190,8 @@ style="width:600px; height:500px;" frameborder="0">
 								<div class="col-xs-1">
 									<p></p>
 								</div>
-								<div class="col-md-10">
-									<input type="number" id="worstMeasureGuess" class="form-control" placeholder="Input a whole number between 0 and infinity for the most difficult measure." min="0">
+								<div class="col-md-10" id="worstMeasureGuesses">
+									<!--<input type="number" id="worstMeasureGuess" class="form-control" placeholder="Input a whole number between 0 and infinity for the most difficult measure." min="0"> -->
 								</div>
 								<div class="col-xs-1">
 									<p></p>
@@ -206,7 +207,7 @@ style="width:600px; height:500px;" frameborder="0">
 									<p></p>
 								</div>
 								<div class="col-md-6">
-									<button type="button" id="PDFVersion" class="btn btn-success">View Selected Piece</button>
+									<button type="button" id="PDFVersion" class="btn btn-success buttonToHide">View Selected Piece</button>
 								</div>
 								<div class="col-md-4">
 									<button type="button" id="ComplexityRunner" class="btn btn-primary">Get Complexity Score</button>
