Adding in support for a DAG in the Game version.
Related to xwsxethan/MusicScoring#104

--- a/WebCode/Game.html
+++ b/WebCode/Game.html
@@ -100,7 +100,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-4" style="position:relative; left:-300px;">
-					<iframe style="width:800px; height:600px;" frameborder="0" id="pieceFramePDF">
+					<iframe style="width:800px; height:800px;" frameborder="0" id="pieceFramePDF">
 					<!-- src="set this with js: http://docs.google.com/gview?url=http://path.com/to/your/pdf.pdf&embedded=true"-->
 					</iframe>
 				</div>
@@ -191,7 +191,8 @@
 									<p></p>
 								</div>
 								<div class="col-md-10" id="worstMeasureGuesses">
-									<!--<input type="number" id="worstMeasureGuess" class="form-control" placeholder="Input a whole number between 0 and infinity for the most difficult measure." min="0"> -->
+									<input type="number" id="hiddenInputElem" class="form-control" placeholder="Input a whole number between 0 and infinity for the most difficult measure." min="0">
+									<p></p>
 								</div>
 								<div class="col-xs-1">
 									<p></p>
