--- a/WebCode/navbar.htm
+++ b/WebCode/navbar.htm
@@ -25,7 +25,7 @@
 						<li><a href="Documents/IRD2015Abstract.pdf" target="_blank">IDR Day 2015 Abstract</a></li>
 						<li><a href="Documents/IRD_Poster.pdf" target="_blank">IDR Day 2015 Poster</a></li>
 						<li><a href="Documents/IRD_Handout.pdf" target="_blank">IDR Day 2015 Handout</a></li>
-						<li><a href="Documents/HolderThesis2015.pdf" target="_blank">Preliminary Thesis</a></li>
+						<li><a href="Documents/HolderThesis2015.pdf" target="_blank">Final MS Thesis</a></li>
 						<li><a href="Documents/ThesisPresentation.pptx" target="_blank">Thesis Presentation</a></li>
 					</ul>
 				</li>
